k8s/prod/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciutat-agora-api
  labels:
    app: ciutat-agora-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ciutat-agora-api
  template:
    metadata:
      name: ciutat-agora-api
      labels:
        app: ciutat-agora-api
    spec:
      containers:
      - name: ciutat-agora-api
        image: eu.gcr.io/websmunicipals/ciutat-agora-api:master-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
