k8s/prod/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciutat-agora-web
  labels:
    app: ciutat-agora-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciutat-agora-web
  template:
    metadata:
      name: ciutat-agora-web
      labels:
        app: ciutat-agora-web
    spec:
      containers:
      - name: ciutat-agora-web
        image: eu.gcr.io/websmunicipals/ciutat-agora-web:master-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 10m
          limits:
            memory: 256Mi
            cpu: 100m
