k8s/prod/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciutat-agora-admin
  labels:
    app: ciutat-agora-admin
spec:
  selector:
    app: ciutat-agora-admin
  type: ClusterIP
  ports:
    - name: http
      port: 80
