k8s/prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciutat-agora-web
  labels:
    app: ciutat-agora-web
spec:
  selector:
    app: ciutat-agora-web
  type: ClusterIP
  ports:
    - name: http
      port: 80
