k8s/prod/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ciutat-agora-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-web-manresa-cat"
spec:
  tls:
  - hosts:
      - web.manresa.cat
    secretName: web-manresa-cat-tls
  rules:
    - host: web.manresa.cat
      http:
        paths:
          - path: /api/ciutatagora
            pathType: Prefix
            backend:
              service:
                name: ciutat-agora-api
                port:
                  number: 80
